[add] intermediate work towards better graph display